--- a/src/courses/courses.scss
+++ b/src/courses/courses.scss
@@ -28,6 +28,7 @@
     }
 
     .footer {
+        margin: 20px 0px;
         .course-footer-section {
             width: 80%;
             box-sizing: border-box;
@@ -46,6 +47,7 @@
 
                 @media only screen and (max-width: 768px) {
                     max-width: 100%;
+                    width: 100%;
                 }
             }
 
@@ -84,6 +86,9 @@
             border-radius: 20px;
             background-color: #fff;
             cursor: pointer;
+            i{
+                margin-left: 10px;
+            }
 
             @media only screen and (max-width: 768px) {
                 left: 38%;
@@ -94,5 +99,18 @@
     @media only screen and (max-width: 768px) {
        margin-top: 0px;
        margin-bottom: 30px;
+    }
+}
+
+.label-key{
+    font-size: 15px !important;
+    color: #444444 !important;
+}
+
+.extra-content{
+    section{
+        label{
+
+        }
     }
 }
